--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,15 @@
 {
-    "name": "Webaxones/wax-add-shop-manager-user-tablepress-capabilities",
-    "description": "Add TablePress plugin capabilities to WooCommerce Shop manager user",
-    "license": "GPL-2.0",
-    "authors": [{
-        "name": "Webaxones",
-        "email": "contact@webaxones.com"
-    }],
-    "type": "wordpress-muplugin",
-    "require": {
-        "composer/installers": "~1.0"
-    }
+	"name": "Webaxones/wax-add-shop-manager-user-tablepress-capabilities",
+	"description": "Add TablePress plugin capabilities to WooCommerce Shop manager user",
+	"license": "GPL-2.0",
+	"authors": [
+		{
+			"name": "Webaxones",
+			"email": "contact@webaxones.com"
+		}
+	],
+	"type": "wordpress-muplugin",
+	"require": {
+		"composer/installers": "^1.0 || ^2.0"
+	}
 }
